# 32

./: AGENTS.md  CLAUDE.md  README.md  skills-lock.json
.claude/skills/mcp-builder/: SKILL.md
deployment/mcp/: tasks-mcp.yaml
mcp/tasks-mcp/: Dockerfile
mcp/tasks-mcp/src/tasks_mcp/: __main__.py
mcp/tasks-mcp/src/tasks_mcp/tools/: _helpers.py  edit.py  remove.py  reschedule.py
mcp/tasks-mcp/tests/: test_models.py
mcp/tasks-mcp/tests/tools/: test_complete.py
services/tasks-mcp/: .dockerignore  Dockerfile  main.py  pyproject.toml
services/tasks-mcp/src/tasks_mcp/: models.py  server.py  store.py
services/tasks-mcp/src/tasks_mcp/tools/: complete.py  create.py  query.py  start.py
services/tasks-mcp/tests/: test_store.py
services/tasks-mcp/tests/tools/: test_create.py  test_edit.py  test_query.py  test_remove.py  test_reschedule.py  test_start.py
specs/mcp/: tasks-mcp-implementation.md  tasks-mcp.md
